@@ -70,7 +70,7 @@ class StartupBannerRenderer {
                 .map(StartupBannerRenderer::normalizeGlobSeparators)
                 .sorted()
                 .toList();
-        lines.add(renderRow(label, sortedGlobs.getFirst()));
+        lines.add(renderRow(label, sortedGlobs.get(0)));
         for (int globIndex = 1; globIndex < sortedGlobs.size(); globIndex++) {
             lines.add(GLOB_CONTINUATION_INDENT + sortedGlobs.get(globIndex));
         }
